--- a/Latmarket/assets/style-main.css
+++ b/Latmarket/assets/style-main.css
@@ -1000,7 +1000,7 @@ align-items: center;
 flex-direction: column;
 }
 
-.favorites-Filter{
+.favoriti-Filter{
 width: 90%;
 height: auto;
 background: var(--maincolor);
@@ -1206,6 +1206,322 @@ background: #ff0000;
 
 #deletForm button i{
 color: var(--textcolor-2);
+}
+
+/* -------------Slud */
+
+#offerSection{
+padding: 2rem 1rem 0 1rem;
+justify-content: top;
+align-items: center;
+flex-direction: column;
+}
+
+.slud-Filter{
+width: 90%;
+height: auto;
+background: var(--maincolor);
+border-radius: .5rem;
+padding: 1rem .5rem;
+box-shadow: var(--shadow);
+margin-top: 2rem;
+display: flex;
+justify-content: center;
+align-items: center;
+}
+
+.car-filter__select-box{
+display: flex;
+justify-content: center;
+align-items: center;
+flex-wrap: wrap;
+width: 30%;
+height: 3rem;
+margin: 0 1rem;
+}
+
+.filt-cont{
+width: 100%;
+height: 100%;
+color: var(--textcolor);
+background-color: var(--maincolor-2);
+font-weight: bold;
+border-radius: .5rem;
+position: relative; 
+}
+
+.filt-cont select{
+width: 100%;
+height: 100%;
+padding: 0 3rem 0 1rem; 
+margin: 0;
+appearance: none;
+-webkit-appearance: none;
+-moz-appearance: none;
+background-color: transparent;
+border: none;
+cursor: pointer; 
+}
+
+.box-arrow{
+position: absolute;
+background: var(--secondcolor);
+width: 3rem;
+height: 100%;
+top: 0;
+right: 0;
+border-bottom-right-radius: .5rem;
+border-top-right-radius: .5rem;
+display: flex;
+justify-content: center;
+align-items: center;
+font-size: 1rem;
+pointer-events: none; 
+}
+
+.filt-cont:hover .box-arrow{
+color: var(--textcolor-2); 
+}
+
+.filt-cont select option{
+font-size: 1rem;
+}
+
+.slud-buttons{
+width: 100%;
+display: flex;
+justify-content: center;
+align-items: center;
+margin-top: 2rem;
+}
+
+.slud-buttons button{
+padding: .7rem 1rem;
+background: var(--secondcolor);
+border-radius: .5rem;
+color: var(--textcolor-2);
+font-size: 1rem;
+margin: 0 .5rem;
+cursor: pointer;
+opacity: 60%;
+}
+
+.slud-buttons button:hover{
+background: var(--hover);
+opacity: 100%;
+}
+
+.slud-buttons button.active{
+opacity: 100%;
+}
+
+.slud-buttons button.active:hover{
+background: var(--secondcolor);
+cursor: default;
+}
+
+.slud-container{
+display: flex;
+justify-content: center;
+flex-wrap: wrap;
+margin-top: 1.5rem;
+}
+
+.slud-container h2{
+background: var(--secondcolor);
+color: var(--textcolor-2);
+border-radius: .5rem;
+padding: 1rem 1.5rem;
+font-size: 1rem;
+}
+
+.slud-container .box{
+width: 19rem;
+height: 29rem;
+border-radius: 1rem;
+overflow: hidden;
+margin: 1rem 1rem;
+text-align: center;
+display: flex;
+justify-content: top;
+align-items: center;
+flex-direction: column;
+background: var(--maincolor);
+}
+
+.slud-container .box img{
+width: 100%;
+height: 40%;
+object-fit: cover;
+}
+
+.slud-container .box h1{
+margin-top: 1rem;
+font-size: 1.2rem;
+}
+
+.slud-container .box .info{
+padding: 0 1rem;
+display: flex;
+justify-content: center;
+flex-direction: column;
+text-align: left;
+width: 100%;
+}
+
+.slud-container .box .info p{
+font-size: .8rem;
+font-weight: bold;
+opacity: 80%;
+margin: .5rem 0;
+}
+
+.slud-container .box .cena{
+width: 60%;
+height: auto;
+margin-top: .5rem;
+}
+
+.slud-container .box .cena p{
+background: var(--secondcolor);
+padding: .5rem 1rem;
+font-size: 1rem;
+border-radius: 2rem;
+color: var(--textcolor-2);
+}
+
+.slud-container .box .controle-buttons{
+width: 100%;
+display: flex;
+justify-content: center;
+align-items: center;
+margin-top: 1rem;
+}
+
+.slud-container .box .controle-buttons form{
+display: flex;
+justify-content: center;
+align-items: center;
+margin: 0 .5rem;
+}
+
+.slud-container .box .controle-buttons form button, .slud-container .box .controle-buttons button{
+width: 2rem;
+height: 2rem;
+line-height: 2rem;
+text-align: center;
+border-radius: .5rem;
+cursor: pointer;
+}
+
+#viewForm button{
+background: var(--secondcolor);
+}
+
+#viewForm button:hover{
+background: var(--hover);
+}
+
+#viewForm button i{
+color: var(--textcolor-2);
+}
+
+#editForm button{
+background: #a98500;
+}
+
+#editForm button:hover{
+background: #cba000;
+}
+
+#editForm button i{
+color: var(--textcolor-2);
+}
+
+
+.deletButton{
+background: #ff9393;
+}
+
+.deletButton:hover{
+background: #ff0000;
+}
+
+.deletButton i{
+color: var(--textcolor-2);
+}
+
+.slud-Delet-Modal{
+position: fixed;
+top: 0;
+left: 0;
+width: 100%;
+height: 100vh;
+background: rgba(0, 0, 0, 60%);
+backdrop-filter: blur(5px);
+z-index: 5;
+display: none;
+}
+
+.slud-Delet-Modal.active{
+display: block;
+}
+
+.Slud-Del-Forma{
+width: 40%;
+height: auto;
+position: fixed;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -100%);
+background: var(--maincolor);
+border-radius: 1rem;
+padding: 2rem;
+justify-content: center;
+align-items: center;
+z-index: 6;
+}
+
+.Slud-Del-Forma form{
+width: 100%;
+height: 100%;
+display: flex;
+justify-content: center;
+align-items: center;
+flex-direction: column;
+}
+
+
+.Slud-Del-Forma form p{
+font-size: 1.2rem;
+}
+
+.form-Buttons{
+width: 30%;
+height: auto;
+display: flex;
+justify-content: space-between;
+align-items: center;
+margin-top: 2rem;
+}
+
+
+.form-Buttons button{
+background: var(--secondcolor);
+color: var(--textcolor-2);
+border-radius: .5rem;
+padding: .7rem 1rem;
+font-size: 1rem;
+cursor: pointer;
+}
+
+.form-Buttons #yes:hover{
+background: #009212;
+}
+
+
+.form-Buttons #no:hover{
+background: #920700;
 }
 
 
