--- a/Latmarket/Transport/car/assets/style-apskate.css
+++ b/Latmarket/Transport/car/assets/style-apskate.css
@@ -296,23 +296,18 @@ font-weight: bold;
 
 
 .komplektacijas_section{
-
 display: flex;
 justify-content: space-between;
-
 }
 
 
 .komplektacijas_section .box{
-
 display: flex;
 justify-content: left;
 flex-direction: column;
-
 }
 
 .komplektacijas-Title{
-
 width: 100%;
 display: flex;
 justify-content: center;
@@ -321,65 +316,48 @@ background: var(--secondcolor);
 padding: .7rem 1rem;
 border-radius: .5rem;
 margin-bottom: 1rem;
-
 }
 
 .komplektacijas-Title h1{
-
 color: var(--textcolor-2);
 font-size: 1rem;
-
 }
 
 .komplektacijas_section .box p{
-
 margin: .5rem 0;
 font-size: .9rem;
 opacity: 50%;
-
 }
 
 .komplektacijas_section .box p.active{
-
 opacity: 100%;
 font-weight: bold;
-
 }
 
 .slud-Rep{
-
 margin-right: 1rem;
 color: red;
 font-size: 1.5rem;
 cursor: pointer;
-
 }
 
-
-
-.info-container{
-    
+.info-container{  
 display: flex;
 justify-content: space-between;
 align-items: center;
 width: 90%;
-
 }
 
-
 .price-Info-Section{
-
 display: flex;
 justify-content: center;
 align-items: center;
-
+flex-direction: column;
 }
 
 .info-container p{
-
 font-size: 1.2rem;
 margin: 0 1rem;
-
 }
 
 #price{
@@ -393,7 +371,133 @@ color: var(--textcolor-2);
 
 
 .info-container p span{
-
 font-weight: bold;    
+}
 
+#ReportButton{
+font-size: 2rem;
+color: red;
+cursor: pointer;
+opacity: 40%;
+}
+
+#ReportButton:hover{
+opacity: 100%;
+}
+
+.fav-rep{
+margin-top: 2rem;
+display: flex;
+justify-content: space-between;
+align-items: center;
+width: 10%;
+}
+
+.fav-rep .favoriti button{
+background: var(--maincolor-2);
+font-size: 2rem;
+cursor: pointer; 
+}
+
+.fav-rep .favoriti button i{
+background: var(--maincolor-2);
+color: #ebb400;
+}
+
+
+.report-Modal{
+position: fixed;
+top: 0;
+left: 0;
+width: 100%;
+height: 100vh;
+background: rgba(0, 0, 0, 60%);
+backdrop-filter: blur(5px);
+z-index: 3;
+display: none;
+}
+
+.report-Modal.active{
+display: block;
+}
+
+.report-box{
+width: 25%;
+height: auto;
+background: var(--maincolor);
+border-radius: 1rem;
+padding: 2rem;
+position: fixed;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
+display: flex;
+justify-content: center;
+align-items: center;
+flex-direction: column;
+text-align: left;
+}
+
+.repText{
+width: 90%;
+text-align: left;
+}
+
+.repText h1{
+margin-top: 1rem;
+margin-bottom: 2rem;
+}
+
+.report-box form{
+width: 90%;
+height: auto;
+display: flex;
+justify-content: center;
+align-items: center;
+flex-direction: column;
+}
+
+.selectReport, .reportTextarea{
+width: 100%;
+display: flex;
+justify-content: center;
+flex-direction: column;
+margin-bottom: 3rem;
+}
+
+.selectReport label, .reportTextarea label{
+margin-bottom: .5rem;
+}
+
+.selectReport select{
+padding: .7rem 1rem;
+border-radius: .5rem;
+font-size: 1rem;
+border: .1rem solid #000;
+}
+
+.reportTextarea textarea{
+resize: none;
+border-radius: .5rem;
+padding: .7rem 1rem;
+font-size: 1rem;
+border: .1rem solid #000;
+height: 10rem;
+}
+
+.report-Button{
+padding: .7rem 1rem;
+border-radius: .5rem;
+background: var(--secondcolor);
+font-size: 1rem;
+color: var(--textcolor-2);
+cursor: pointer;
+}
+
+.report-Button i{
+margin-right: .5rem;
+}
+
+.report-Button:hover{
+background: var(--hover);
 }
