--- a/Latmarket/assets/style-main.css
+++ b/Latmarket/assets/style-main.css
@@ -209,7 +209,26 @@ align-items: center;
 
 .footerbox .box{
 text-align: center;
-margin: 4rem;
+margin: 1rem 4rem;
+display: flex;
+justify-content: center;
+align-items: center;
+flex-direction: column;
+}
+
+.footerbox .box a{
+font-size: 1.5rem;
+margin: .5rem 0;
+cursor: pointer;
+opacity: 50%;
+}
+
+.footerbox .box a i{
+margin-right: .5rem;
+}
+
+.footerbox .box a:hover{
+opacity: 100%;
 }
 
 /* ---------------------------------------Login-Register */
@@ -256,6 +275,12 @@ top: 1rem;
 right: 1rem;
 cursor: pointer;
 color: red;
+}
+
+.login-message{
+margin-top: 1rem;
+color: red;
+font-weight: bold;
 }
 
 .auth-toggle-buttons{
